--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "server": "json-server --watch ./mock-api/db.js --port 5000",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -12,11 +13,16 @@
     "@types/node": "18.14.1",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.3.4",
     "eslint": "8.34.0",
     "eslint-config-next": "13.2.1",
+    "json-server": "^0.17.2",
     "next": "13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^7.6.0"
   }
 }
